--- a/portfolio/report.html
+++ b/portfolio/report.html
@@ -4,8 +4,18 @@
   <meta charset="UTF-8">
   <title>CodePen - WebGL enhanced javascript drag slider</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css?family=Arvo:400,700&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Arvo:400,700&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <!-- Popper JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -14,59 +24,49 @@
 
 <div id="content">
 
-  <h1 id="title" class="title">Evenements</h1>
+  <h1 id="title" class="title">Reportages</h1>
 
+    <!-- Modal -->
+    <div class="modal fade border-0" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog m-0 border-0"
+      style="margin-left: 5vw!important; margin-top: 10vh!important; width: 80vw;!important" role="document">
+      <div class="modal-content m-0"
+        style="margin-left: 5vw!important; margin-top: 10vh!important; width: 80vw;!important">
+        <iframe src="https://player.vimeo.com/video/386548039" class="border-0 video-player" style="position:absolute;" height="800"
+          width="100%" allow="autoplay; fullscreen" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+
+  <button type="button" class="btn d-none btn-primary" id="btn-modal" data-toggle="modal" data-target="#exampleModal">
+    Launch demo modal
+  </button>
+  
   <!-- drag slider -->
   <div id="planes">
 
-    <div data-selected="hello" class="plane-wrapper">
-      <span data-selected="hello" class="plane-title">Bahamas</span>
-      <div data-selected="hello" class="plane">
-        <img src="https://source.unsplash.com/2fFd7SIVpz8/1280x720" alt="Photo by Gregory Culmer on Unsplash" data-sampler="planeTexture" crossorigin />
+    <div data-selected="https://player.vimeo.com/video/386597963" class="plane-wrapper">
+      <span data-selected="https://player.vimeo.com/video/386597963" class="plane-title">Festin de noël de vladimir cosma </span>
+      <div data-selected="https://player.vimeo.com/video/386597963" class="plane">
+        <img src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/report/festin-de-noel.png" alt="Photo by Gregory Culmer on Unsplash" data-sampler="planeTexture" crossorigin />
       </div>
     </div>
 
-    <div data-selected="hello" class="plane-wrapper">
-      <span data-selected="hello" class="plane-title">Philippines</span>
-      <div data-selected="hello" class="plane">
-        <img src="https://source.unsplash.com/SDaJRmZYMDA/1280x720" alt="Photo by James Connolly on Unsplash" data-sampler="planeTexture" crossorigin />
+    <div data-selected="https://player.vimeo.com/video/309500801" class="plane-wrapper">
+      <span data-selected="https://player.vimeo.com/video/309500801" class="plane-title">Gospel Homage à Edwin Hawkins</span>
+      <div data-selected="https://player.vimeo.com/video/309500801" class="plane">
+        <img src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/report/gospal-homage.png" alt="Photo by James Connolly on Unsplash" data-sampler="planeTexture" crossorigin />
       </div>
     </div>
 
-    <div data-selected="hello" class="plane-wrapper">
-      <span data-selected="hello" class="plane-title">Indonesia</span>
-      <div data-selected="hello" class="plane">
-        <img src="https://source.unsplash.com/DxmBSgUYKis/1600x900" alt="Photo by sutirta budiman on Unsplash" data-sampler="planeTexture" crossorigin />
+    <div data-selected="https://player.vimeo.com/video/312156447" class="plane-wrapper">
+      <span data-selected="https://player.vimeo.com/video/312156447" class="plane-title">Poète du Bitume</span>
+      <div data-selected="https://player.vimeo.com/video/312156447" class="plane">
+        <img src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/report/poete-noel-bitume.png" alt="Photo by sutirta budiman on Unsplash" data-sampler="planeTexture" crossorigin />
       </div>
     </div>
 
-    <div data-selected="hello" class="plane-wrapper">
-      <span data-selected="hello" class="plane-title">Maldives</span>
-      <div data-selected="hello" class="plane">
-        <img src="https://source.unsplash.com/lT9rqfG7lcQ/1280x720" alt="Photo by Jailam Rashad on Unsplash" data-sampler="planeTexture" crossorigin />
-      </div>
-    </div>
-
-    <div data-selected="hello" class="plane-wrapper">
-      <span data-selected="hello" class="plane-title">Greece</span>
-      <div data-selected="hello" class="plane">
-        <img src="https://source.unsplash.com/QXW1YEMhq_4/1280x720" data-sampler="planeTexture" alt="Photo by Chris Karidis on Unsplash" crossorigin />
-      </div>
-    </div>
-
-    <div data-selected="hello" class="plane-wrapper">
-      <span data-selected="hello" class="plane-title">Fiji</span>
-      <div data-selected="hello" class="plane">
-        <img src="https://source.unsplash.com/3jtm7BMsaPA/1280x720" alt="Photo by Lili Ortiz on Unsplash" data-sampler="planeTexture" crossorigin />
-      </div>
-    </div>
-
-    <div data-selected="hello" class="plane-wrapper">
-      <span data-selected="hello" class="plane-title">Thailand</span>
-      <div data-selected="hello" class="plane">
-        <img src="https://source.unsplash.com/Mwg_MdX-Jx4/1280x720" data-sampler="planeTexture" alt="Photo by Samule Sun on Unsplash" crossorigin />
-      </div>
-    </div>
 
   </div>
 
