--- a/portfolio/clip.html
+++ b/portfolio/clip.html
@@ -29,7 +29,7 @@
       style="margin-left: 5vw!important; margin-top: 10vh!important; width: 80vw;!important" role="document">
       <div class="modal-content m-0"
         style="margin-left: 5vw!important; margin-top: 10vh!important; width: 80vw;!important">
-        <iframe src="https://www.youtube.com/embeded/eH1GClvoHq8" class="border-0 video-player" style="position:absolute;" height="800"
+        <iframe src="https://www.youtube.com/embed/eH1GClvoHq8" class="border-0 video-player" style="position:absolute;" height="800"
           width="100%" allow="autoplay; fullscreen" allowfullscreen></iframe>
       </div>
     </div>
@@ -51,18 +51,18 @@
     <!-- drag slider -->
     <div id="planes">
 
-      <div data-selected="https://www.youtube.com/embeded/eH1GClvoHq8" class="plane-wrapper">
-        <!-- <span data-selected="https://www.youtube.com/embeded/qNHBG0GJ_g0" class="plane-title">Lacrim Philippins </span> -->
-        <div data-selected="https://www.youtube.com/embeded/eH1GClvoHq8" class="plane">
+      <div data-selected="https://www.youtube.com/embed/eH1GClvoHq8" class="plane-wrapper">
+        <!-- <span data-selected="https://www.youtube.com/embed/qNHBG0GJ_g0" class="plane-title">Lacrim Philippins </span> -->
+        <div data-selected="https://www.youtube.com/embed/eH1GClvoHq8" class="plane">
           <img
             src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/lacrim-philippins.png"
             alt="Photo by Gregory Culmer on Unsplash" data-sampler="planeTexture" crossorigin />
         </div>
       </div>
 
-      <div data-selected="https://www.youtube.com/embeded/CRPNcrBAiOc" class="plane-wrapper">
-        <!-- <span data-selected="https://www.youtube.com/embeded/qNHBG0GJ_g0" class="plane-title">Philippines</span> -->
-        <div data-selected="https://www.youtube.com/embeded/CRPNcrBAiOc" class="plane">
+      <div data-selected="https://www.youtube.com/embed/CRPNcrBAiOc" class="plane-wrapper">
+        <!-- <span data-selected="https://www.youtube.com/embed/qNHBG0GJ_g0" class="plane-title">Philippines</span> -->
+        <div data-selected="https://www.youtube.com/embed/CRPNcrBAiOc" class="plane">
           <img
             src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/adios-algerino-soolking.png"
             alt="Photo by James Connolly on Unsplash" data-sampler="planeTexture" crossorigin />
@@ -78,27 +78,27 @@
       </div>
 
 
-      <div data-selected="https://www.youtube.com/embeded/qNHBG0GJ_g0" class="plane-wrapper">
-        <span data-selected="https://www.youtube.com/embeded/qNHBG0GJ_g0" class="plane-title">Bob Lunet <br> "Aznavour du pauvre"</span>
-        <div data-selected="https://www.youtube.com/embeded/qNHBG0GJ_g0" class="plane">
+      <div data-selected="https://www.youtube.com/embed/qNHBG0GJ_g0" class="plane-wrapper">
+        <span data-selected="https://www.youtube.com/embed/qNHBG0GJ_g0" class="plane-title">Bob Lunet <br> "Aznavour du pauvre"</span>
+        <div data-selected="https://www.youtube.com/embed/qNHBG0GJ_g0" class="plane">
           <img
             src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/aznavour-du-pauvre.png"
             alt="Photo by Jailam Rashad on Unsplash" data-sampler="planeTexture" crossorigin />
         </div>
       </div>
 
-      <div data-selected="https://www.youtube.com/embeded/ZG0RMTavQ_0" class="plane-wrapper">
-        <span data-selected="https://www.youtube.com/embeded/ZG0RMTavQ_0" class="plane-title">Bob Lunet <br> "Poignée de punchline"</span>
-        <div data-selected="https://www.youtube.com/embeded/ZG0RMTavQ_0" class="plane">
+      <div data-selected="https://www.youtube.com/embed/ZG0RMTavQ_0" class="plane-wrapper">
+        <span data-selected="https://www.youtube.com/embed/ZG0RMTavQ_0" class="plane-title">Bob Lunet <br> "Poignée de punchline"</span>
+        <div data-selected="https://www.youtube.com/embed/ZG0RMTavQ_0" class="plane">
           <img
             src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/poigne-de-punchline.png"
             data-sampler="planeTexture" alt="Photo by Chris Karidis on Unsplash" crossorigin />
         </div>
       </div>
 
-      <div data-selected="https://www.youtube.com/embeded/GkIAcYnmph4" class="plane-wrapper">
-        <span data-selected="https://www.youtube.com/embeded/GkIAcYnmph4" class="plane-title">Bob Lunet <br> "Bonjour pour souffrir"</span>
-        <div data-selected="https://www.youtube.com/embeded/GkIAcYnmph4" class="plane">
+      <div data-selected="https://www.youtube.com/embed/GkIAcYnmph4" class="plane-wrapper">
+        <span data-selected="https://www.youtube.com/embed/GkIAcYnmph4" class="plane-title">Bob Lunet <br> "Bonjour pour souffrir"</span>
+        <div data-selected="https://www.youtube.com/embed/GkIAcYnmph4" class="plane">
           <img src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/chaques-fois.png"
             data-sampler="planeTexture" alt="Photo by Chris Karidis on Unsplash" crossorigin />
         </div>
@@ -128,9 +128,9 @@
         </div>
       </div>
 
-      <div data-selected="https://www.youtube.com/embeded/iTh-pWyCbK4" class="plane-wrapper">
-        <span data-selected="https://www.youtube.com/embeded/iTh-pWyCbK4" class="plane-title">Nathalie Donice <br> "Le Silence Fait Mal" </span>
-        <div data-selected="https://www.youtube.com/embeded/iTh-pWyCbK4" class="plane">
+      <div data-selected="https://www.youtube.com/embed/iTh-pWyCbK4" class="plane-wrapper">
+        <span data-selected="https://www.youtube.com/embed/iTh-pWyCbK4" class="plane-title">Nathalie Donice <br> "Le Silence Fait Mal" </span>
+        <div data-selected="https://www.youtube.com/embed/iTh-pWyCbK4" class="plane">
           <img src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/nathalie-donice.png"
             alt="Photo by James Connolly on Unsplash" data-sampler="planeTexture" crossorigin />
         </div>
