--- a/index.html
+++ b/index.html
@@ -301,6 +301,27 @@
 
 
 	<!--====== Javascripts & Jquery ======-->
+	<script>
+		console.log('Get navigator');
+		console.log(navigator.userAgent);
+
+		if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+			// some code..
+			let planes = document.querySelectorAll(".archive-item");
+			let canvas = document.querySelector("#canvas");
+			let mainContent = document.querySelector(".demo-4");
+
+			mainContent.style.backgoundSize = "0%";
+			canvas.remove();
+			
+			planes.forEach((element) => {
+				element.classList.remove('archive-item');
+			})
+			
+
+
+		}
+	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/modal-video@2.4.2/js/modal-video.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
